fixed a white space wrapping issue in mobile version

--- a/src/Styles/_nav.scss
+++ b/src/Styles/_nav.scss
@@ -2,6 +2,7 @@
   nav {
     div {
       z-index: 10;
+      white-space: nowrap;
       button {
         z-index: inherit;
       }
